# CytoDataParser

./: pyproject.toml  setup.py
examples/: Test.json  test_notebook.ipynb
examples/2025-06-20 Skin Tx Characterization/: 2025-06-20 Skin Tx Summary.pptx  2025-06-20 Skin Tx Summary.xlsx  23-Jun-2025.wsp
examples/2025-06-20 Skin Tx Characterization/Unmixed/Control/: 1 Spl.fcs  2 LN.fcs  3 Spl.fcs
examples/2025-06-20 Skin Tx Characterization/Unmixed/Experimental/: 1 LN.fcs  3 LN.fcs  3 Spl.fcs
examples/2025-06-20 Skin Tx Characterization/Unmixed/Reference Group/: APC (Cells).fcs  APC-eFluor 780 (Cells).fcs  BUV 805 (Cells).fcs  PE (Cells).fcs  PE-Cy7 (Cells).fcs  eFluor 450 (Cells).fcs
src/CytoDataParser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cytodataparser/: __init__.py  core.py
src/cytodataparser/analysis/: __init__.py  helpers.py  summary.py  testing.py
src/cytodataparser/io/: __init__.py  cytogateparser_io.py
src/cytodataparser/plotting/: __init__.py  categorical.py  helpers.py  themes.py
src/cytodataparser/structures/: __init__.py  dataclasses.py  node.py  sample.py  tree.py
src/cytodataparser/utils/: __init__.py  helpers.py  predicates.py
tests/: test_core.py  test_node.py  test_tree.py  test_utils.py
