[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CytoDataParser"
version = "0.3.1"
description = "Eases the analysis and plotting of expert-gated cytometry data"
authors = [{ name="Brendan Foley", email="bfoley3@jh.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = "== 3.12"
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "polars",
    "scikit-learn",
    "statsmodels",
    "scipy",
    "pyarrow>=8.0.0",
    "fastexcel",
    "pingouin",
    "scikit-posthocs",
    "nbformat>=4.2.0",
    "flowkit"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
